Fix missing scrollbar

--- a/dev-portal/src/index.css
+++ b/dev-portal/src/index.css
@@ -16,6 +16,7 @@ h1, h2, h3, h4, h5 {
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: scroll;
 }
 
 .fixfloat:after {
@@ -36,3 +37,7 @@ h1, h2, h3, h4, h5 {
     0px 2px 4px 0px rgba(34, 36, 38, 0.12), 
     0px 2px 10px 0px rgba(34, 36, 38, 0.15)
 }
+
+/*div.ui.segment.pushable {
+  overflow: scroll;
+}*/
